Ajout d'une classe de TU de description des Keyspace
svn path=/java/trunk/; revision=4079